Sigil v0.3.0RC1 ADD_DATE
    - fixed a rare Tidy bug with dissapearing spaces when the only whitespace in an element was 
    the newline following a start tag (issue #387)
    - changed the internal DOM engine from Qt's QDom to Xerces; this should also bring numerous
    bug fixes and performance improvements plus a small (~10%) decrease in memory consumption
    (issue #367)
    - updated Qt to 4.7: this should bring a 400%+ performance increase in Book View rendering 
    along with countless smaller performance improvements and bug fixes across the board
    - switched to the MSVC 10 compiler for Windows releases; should bring ~5% general performance 
    improvement 
    - fixed several crash/error problems relating to opening, saving and modifying epub files which
    have onerous file permissions set for internal content files (issue #574)
    - added a workaround for broken epubs created by other epub-producing software which caused
    a crash on certain searches with the Find dialog (issue #548)
    - fixed a problem with chapter splits being placed in the wrong reading order if a file was
    previously deleted from the Book Browser (issue #497)

Sigil v0.2.4 2010.08.12.
    - fixed a problem with updating image paths for images with the same filename but coming from
    different parent directories (issue #501)
    - added a new "Merge With Previous" context menu action for XHTML files in the Book Browser
    (issue #265)
    - changed Tidy to handle the common typing mistake of ending entities with a ':' instead
    of a ';' (issue #535)
    - fixed a bug where double-clicking a file in the Book Browser for a file that was already 
    opened in a tab switched that tab back to Book View; the tab now retains whatever View
    it was in previously
    - newly opened tabs now default to the View of the current tab (issue #468)
    - re-engineered the locations where Sigil stores its work files; the system-provided temp