@@ -1,4 +1,5 @@
 Sigil v0.3.0RC1 ADD_DATE
+    - made Tidy handle common user errors like "&co." in the HTML source instead of "&amp;co."
     - fixed a rare Tidy bug with dissapearing spaces when the only whitespace in an element was 
     the newline following a start tag (issue #387)
     - changed the internal DOM engine from Qt's QDom to Xerces; this should also bring numerous
